--- a/update.html
+++ b/update.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <a href="URL_HERE">Link</a>
+  <a href="https://www.icloud.com/shortcuts/9191902b57cf44089183cff223494a9b">Link</a>
 
 </body>
 </html>
